# prebuilts_sdk

./: Android.bp  BUILD.bazel  METADATA  TEST_MAPPING  create-android-plus-updatable-jar.sh  java_toolchain_has_all_android_jars.sh  toolchains.bzl  utils.bzl
33/system/api/: android-incompatibilities.txt
34/module-lib/: README.md
34/module-lib/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-non-updatable.txt  android.txt  framework-location.txt
34/public/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-non-updatable-removed.txt  android-non-updatable.txt  android-removed.txt  art-incompatibilities.txt  art.txt  framework-adservices-incompatibilities.txt  framework-location.txt  framework-nfc-removed.txt  framework-nfc.txt  runtime-i18n.txt
34/system-server/api/: android.txt
34/system/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-non-updatable-removed.txt  android-non-updatable.txt  android-removed.txt  android.txt  framework-connectivity-incompatibilities.txt  framework-location-removed.txt  framework-location.txt  framework-media-incompatibilities.txt  framework-nfc.txt  framework-tethering-incompatibilities.txt
34/test/api/: android.txt
35/module-lib/api/: android-incompatibilities.txt  android-non-updatable.txt  android.txt  art.txt  framework-media.txt  framework-permission-s.txt  framework-profiling.txt  framework-sdksandbox.txt
35/public/api/: android-incompatibilities.txt  android-non-updatable-incompatibilities.txt  android-removed.txt  art-incompatibilities.txt  framework-appsearch.txt  framework-connectivity-t.txt  framework-healthfitness.txt  framework-location.txt  framework-nfc.txt  framework-ondevicepersonalization.txt  framework-pdf-v.txt  framework-pdf.txt  framework-profiling.txt  framework-sdksandbox.txt  framework-wifi.txt  runtime-i18n-removed.txt  runtime-i18n.txt
35/system-server/api/: android.txt  service-permission.txt
35/system/api/: android-non-updatable-incompatibilities.txt  android-non-updatable-removed.txt  android-non-updatable.txt  android-removed.txt  android.net.ipsec.ike.txt  android.txt  framework-bluetooth.txt  framework-location.txt  framework-nfc.txt  framework-tethering.txt  framework-uwb.txt  framework-wifi.txt
35/test/api/: android-non-updatable.txt  framework-virtualization.txt
current/: Android.bp  update_androidx-api.sh
current/aaos-libs/: Android.bp  AndroidManifest-tokenlib.xml  car-app-card-host-lib.aar  car-app-card-lib.aar  car-apps-common.aar  car-assist-lib.aar  car-broadcastradio-support.aar  car-media-common.aar  car-media-extensions.aar  car-messaging-models.aar  car-telephony-common.aar  car-ui-lib-no-overlayable.aar  car-ui-lib-testing-support.aar  car-ui-lib.aar  car-uxr-client-lib.aar  oem-token-lib.aar  remove_overlayable.py  token-sharedlibrary.aar  update_prebuilts.sh
current/androidx/: Android.bp  AndroidManifest.xml  OWNERS  TEST_MAPPING  drop_config.toml
current/androidx-legacy/: Android.bp
current/androidx-legacy/manifests/androidx.legacy_legacy-preference-v14/: AndroidManifest.xml
current/androidx-legacy/manifests/androidx.legacy_legacy-support-core-ui/: AndroidManifest.xml
current/androidx-legacy/manifests/androidx.legacy_legacy-support-core-utils/: AndroidManifest.xml
current/androidx-legacy/manifests/androidx.legacy_legacy-support-v13/: AndroidManifest.xml
current/androidx-legacy/manifests/androidx.legacy_legacy-support-v4/: AndroidManifest.xml
current/androidx-legacy/manifests/androidx.lifecycle_lifecycle-extensions/: AndroidManifest.xml
current/androidx-legacy/manifests/androidx.localbroadcastmanager_localbroadcastmanager/: AndroidManifest.xml
current/androidx/manifests/androidx-constraintlayout_constraintlayout/: AndroidManifest.xml
current/androidx/manifests/androidx.appcompat_appcompat/: AndroidManifest.xml
current/androidx/manifests/androidx.appcompat_appcompat-resources/: AndroidManifest.xml
current/androidx/manifests/androidx.appsearch_appsearch/: AndroidManifest.xml
current/androidx/manifests/androidx.appsearch_appsearch-builtin-types/: AndroidManifest.xml
current/androidx/manifests/androidx.appsearch_appsearch-platform-storage/: AndroidManifest.xml
current/androidx/manifests/androidx.arch.core_core-runtime/: AndroidManifest.xml
current/androidx/manifests/androidx.arch.core_core-testing/: AndroidManifest.xml
current/androidx/manifests/androidx.asynclayoutinflater_asynclayoutinflater/: AndroidManifest.xml
current/androidx/manifests/androidx.benchmark_benchmark-common/: AndroidManifest.xml
current/androidx/manifests/androidx.benchmark_benchmark-junit4/: AndroidManifest.xml
current/androidx/manifests/androidx.biometric_biometric/: AndroidManifest.xml
current/androidx/manifests/androidx.camera_camera-viewfinder/: AndroidManifest.xml
current/androidx/manifests/androidx.car.app_app-automotive/: AndroidManifest.xml
current/androidx/manifests/androidx.cardview_cardview/: AndroidManifest.xml
current/androidx/manifests/androidx.compose.runtime_runtime-tracing/: AndroidManifest.xml
current/androidx/manifests/androidx.coordinatorlayout_coordinatorlayout/: AndroidManifest.xml
current/androidx/manifests/androidx.core_core-animation-testing/: AndroidManifest.xml
current/androidx/manifests/androidx.customview_customview/: AndroidManifest.xml
current/androidx/manifests/androidx.customview_customview-poolingcontainer/: AndroidManifest.xml
current/androidx/manifests/androidx.datastore_datastore/: AndroidManifest.xml
current/extras/app-toolkit/: Android.bp
current/extras/constraint-layout-x/: Android.bp
current/extras/material-design/: Android.bp
current/extras/material-design-x/: Android.bp
current/public/: framework.aidl
current/support/: Android.bp
extensions/: README.md
renderscript/: OWNERS
tools/: Android.bp  BUILD.bazel  OWNERS
tools/darwin/lib64/: libbcc.dylib  libbcinfo.dylib  libc++.dylib
tools/jetifier/jetifier-standalone/: Android.bp
update_prebuilts/: OWNERS  update_prebuilts.py
(+9111 files in other folders)
