exports_files(
    [
        "linux/bin/aapt",
        "lib/dx.jar",
        "dx",
        "linux/bin/aidl",
        "linux/bin/zipalign",
        "mainDexClasses.rules",
        "linux/lib/apksigner.jar",
    ],
    visibility = [
        "//prebuilts/sdk:__pkg__",
    ],
)

exports_files(
    [
        #TODO (b/245736162): Get Bazel to build llvm-rs-cc from source instead.
        "linux/bin/llvm-rs-cc",
    ],
    visibility = [
        "//build/bazel:__subpackages__",
        "//prebuilts/sdk:__pkg__",
    ],
)
